--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Share+Tech+Mono&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="css/style.css">
-    <title>Comandos de Pentesting</title>
+    <title>Pentools - Sitio Web</title>
 </head>
 <body>
     <header>
-        <h1>Comandos de Herramientas de Pentesting</h1>
+        <h1>Pentools - Comandos de Herramientas de Pentesting</h1>
         <input type="text" id="search-bar" placeholder="Buscar comandos...">
     </header>
     <main>
